# claudette

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  llms-full.txt  llms.txt  pyproject.toml
claudette/: __init__.py
claudette/cli/: app.py  commands.py  dashboard.py  init.py
claudette/core/: autonomy.py  bootstrap.py  budget.py  config.py  dag.py  discovery.py  forge_factory.py  gh_cli_client.py  github_client.py  llm_client.py  metrics.py  notifications.py  poll.py  relay.py  skills.py
claudette/prompts/: manager.jinja2  summarizer.jinja2
claudette/protocols/: __init__.py  forge.py  github.py  llm.py
docs/: autonomy.md  cli.md  configuration.md  cross-repo.md  memory.md  metrics.md  pipeline.md  pr-rules.md  relay.md
src/claudette/cli/: app.py  commands.py  init.py
src/claudette/core/: bootstrap.py  clock.py  config.py  gh_cli_client.py  github_client.py  identity.py  llm_client.py  memory.py  poll.py  relay.py  skills.py
src/claudette/prompts/: manager.jinja2
src/claudette/protocols/: clock.py  github.py
tests/fixtures/: basic_issue_lifecycle.yaml  cross_repo_handoff.yaml
tests/integration/: conftest.py  test_tick.py
tests/unit/: test_budget.py  test_config.py  test_dag.py  test_discovery.py  test_github_client.py  test_identity.py  test_llm_client.py  test_metrics.py  test_pipeline.py  test_relay.py
