[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudette"
version = "0.1.0"
description = "Why is everything so hard — just make me a sandwich."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "claudette contributors" },
]
keywords = ["llm", "github", "orchestration", "automation", "claude", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "questionary>=2.0",
    "rich>=13.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dense = ["model2vec>=0.3"]
bm25 = ["bm25s[core]>=0.2"]
search = ["model2vec>=0.3", "bm25s[core]>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "coverage>=7.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "model2vec>=0.3",
    "bm25s[core]>=0.2",
]

[project.scripts]
claudette = "claudette.cli.app:main"

[project.urls]
Homepage = "https://github.com/CircArgs/claudette"
Documentation = "https://github.com/CircArgs/claudette/blob/main/README.md"
Repository = "https://github.com/CircArgs/claudette"
Issues = "https://github.com/CircArgs/claudette/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claudette"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/claudette/core/skills.py" = ["E501"]  # prose/documentation strings
"src/claudette/core/bootstrap.py" = ["E501"]  # generated AGENTS.md content

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure logic tests, no I/O",
    "integration: Full pipeline with fakes",
    "sandbox: Live GitHub tests with throwaway repos",
]
